least_request_policy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0,port_value: 9901}
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address: { address: 0.0.0.0,port_value: 80}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: web_service_1
              domains:
              - "*"
              routes:
              - match: {prefix: "/"}
                route: {cluster: webcluster}
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: LEAST_REQUEST
    least_request_lb_config:
      choice_count: 2
    load_assignment:
      cluster_name: webcluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: service_red,port_value: 80}
          load_balancing_weight: 1
        - endpoint:
            address:
              socket_address: {address: service_blue,port_value: 80}
          load_balancing_weight: 3
        - endpoint:
            address:
              socket_address: {address: service_green,port_value: 80}
          load_balancing_weight: 5
